objects/nFORCE__System_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A set of key-value pairs that can be used to set organization-wide parameters</description>
    <fields>
        <fullName>nFORCE__Category_Name__c</fullName>
        <description>The field is required. It indicates the category to which the system property belongs.</description>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>This field is optional. It is manually populated. It describes the system property in more depth.</description>
        <inlineHelpText>Description of the custom setting implemented in order to describe the Category and System Property.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Institution_ID__c</fullName>
        <description>This text field contains the Institution ID for custom settings that apply to a specific institution. If the custom setting does not relate to institution configuration, leave this field blank. Manually populate this field with the institution ID to associate the custom setting with that institution. The custom setting cloning script documented in Customer Engagement Solution configuration documentation autopopulates Institution ID when appropriate.</description>
        <inlineHelpText>Leave blank if custom setting does not apply to a specific institution. If custom setting applies to a specific institution, manually populate with Institution ID If not already autopopulated.</inlineHelpText>
        <label>Institution ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The field is required. It indicates if the system property is active. If the system property is not active it will not be used.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Key__c</fullName>
        <description>The field is required. The combination of the category and the key is used to uniquely identify the system property.</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Value__c</fullName>
        <description>The field is required. It indicates the value of the system property. The field controls the behaviour of the application.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Is_Encrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A required field that indicates if the system property value is encrypted; its default is false.</description>
        <label>Is Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Value_Data_Type__c</fullName>
        <description>A required field that indicates the system property value&apos;s data type; its default is String.</description>
        <label>Value Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>System Properties</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Category_Name__c</columns>
        <columns>nFORCE__Key__c</columns>
        <columns>nFORCE__Value__c</columns>
        <columns>nFORCE__Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>